Update giao dien (13/11/2022)

--- a/Test02/Views/KinhDoanh/TrangChu.cshtml
+++ b/Test02/Views/KinhDoanh/TrangChu.cshtml
@@ -6,5 +6,99 @@
     ViewBag.nd = "Bảng điều khiển";
 }
 
-<h2>Đây là trang chủ</h2>
+<div class="col-md-12">
+    <div class="tile">
+        <h3 class="tile-title">Tình trạng đơn hàng</h3>
+        <div>
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>ID đơn hàng</th>
+                        <th>Tên khách hàng</th>
+                        <th>Tổng tiền</th>
+                        <th>Trạng thái</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>AL3947</td>
+                        <td>Phạm Thị Ngọc</td>
+                        <td>
+                            19.770.000 đ
+                        </td>
+                        <td><span class="badge bg-info">Chờ xử lý</span></td>
+                    </tr>
+                    <tr>
+                        <td>ER3835</td>
+                        <td>Nguyễn Thị Mỹ Yến</td>
+                        <td>
+                            16.770.000 đ
+                        </td>
+                        <td><span class="badge bg-warning">Đang vận chuyển</span></td>
+                    </tr>
+                    <tr>
+                        <td>MD0837</td>
+                        <td>Triệu Thanh Phú</td>
+                        <td>
+                            9.400.000 đ
+                        </td>
+                        <td><span class="badge bg-success">Đã hoàn thành</span></td>
+                    </tr>
+                    <tr>
+                        <td>MT9835</td>
+                        <td>Đặng Hoàng Phúc	</td>
+                        <td>
+                            40.650.000 đ
+                        </td>
+                        <td><span class="badge bg-danger">Đã hủy	</span></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <!-- / div trống-->
+    </div>
+</div>
+<!-- / col-12 -->
+<!-- col-12 -->
+<div class="col-md-12">
+    <div class="tile">
+        <h3 class="tile-title">Đại lý mới</h3>
+        <div>
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Tên khách hàng</th>
+                        <th>Ngày sinh</th>
+                        <th>Số điện thoại</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>#183</td>
+                        <td>Hột vịt muối</td>
+                        <td>21/7/1992</td>
+                        <td><span class="tag tag-success">0921387221</span></td>
+                    </tr>
+                    <tr>
+                        <td>#219</td>
+                        <td>Bánh tráng trộn</td>
+                        <td>30/4/1975</td>
+                        <td><span class="tag tag-warning">0912376352</span></td>
+                    </tr>
+                    <tr>
+                        <td>#627</td>
+                        <td>Cút rang bơ</td>
+                        <td>12/3/1999</td>
+                        <td><span class="tag tag-primary">01287326654</span></td>
+                    </tr>
+                    <tr>
+                        <td>#175</td>
+                        <td>Hủ tiếu nam vang</td>
+                        <td>4/12/20000</td>
+                        <td><span class="tag tag-danger">0912376763</span></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
