--- a/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
+++ b/Test02/Views/KinhDoanh/Layout/LayoutKD.cshtml
@@ -47,40 +47,40 @@
         <hr>
         <ul class="app-menu">
             <li>
-                <a class="app-menu__item @ViewBag.home" href="TrangChu">
+                <a class="app-menu__item @ViewBag.home" href="~/KinhDoanh/TrangChu">
                     <i class='app-menu__icon bx bx-tachometer'></i>
                     <span class="app-menu__label">Trang chủ</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item  @ViewBag.dl" href="QuanLyDL">
+                <a class="app-menu__item  @ViewBag.dl" href="~/KinhDoanh/QuanLyDL">
                     <i class='app-menu__icon bx bx-id-card'></i> <span class="app-menu__label">Quản lý đại lý</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.dh" href="QuanLyDH">
+                <a class="app-menu__item @ViewBag.dh" href="~/KinhDoanh/QuanLyDH">
                     <i class='app-menu__icon bx bx-user-voice'></i><span class="app-menu__label">Quản lý đơn hàng</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.hd" href="QuanLyHD">
+                <a class="app-menu__item @ViewBag.hd" href="~/KinhDoanh/QuanLyHD">
                     <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Quản lý hóa đơn</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.sp" href="QuanLySP">
+                <a class="app-menu__item @ViewBag.sp" href="~/KinhDoanh/QuanLySP">
                     <i class='app-menu__icon bx bx-task'></i><span class="app-menu__label">Quản lý sản phẩm</span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item @ViewBag.kho" href="QuanLyKho">
+                <a class="app-menu__item @ViewBag.kho" href="~/KinhDoanh/QuanLyKho">
                     <i class='app-menu__icon bx bx-run'></i><span class="app-menu__label">
                         Quản lý kho
                     </span>
                 </a>
             </li>
             <li>
-                <a class="app-menu__item  @ViewBag.baocao" href="BaoCao">
+                <a class="app-menu__item  @ViewBag.baocao" href="~/KinhDoanh/BaoCao">
                     <i class='app-menu__icon bx bx-pie-chart-alt-2'></i><span class="app-menu__label">Báo cáo</span>
                 </a>
             </li>
