--- a/Test02/Views/KinhDoanh/ChinhSuaDL.cshtml
+++ b/Test02/Views/KinhDoanh/ChinhSuaDL.cshtml
@@ -77,7 +77,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.NgayTiepNhan, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="datetime"class="form-control" name="NgayTiepNhan"/>
+                <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayTiepNhan must be a date." id="NgayTiepNhan" name="NgayTiepNhan" type="Date" value="">
                 @Html.ValidationMessageFor(model => model.NgayTiepNhan, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -91,5 +91,7 @@
 }
 
 <div>
-    @Html.ActionLink("Quay trở lại danh sách", "QuanLyDL")
+    <a href="~/KinhDoanh/QuanLySP">
+        Quay lại danh sách sản phẩm
+    </a>
 </div>
